Changelog
=========


2.1.9 (unreleased)
------------------

- Nothing changed yet.


2.1.8 (2012-06-21)
------------------

- Disable pdf export actions for templatedossiers.
  Issue #1368 Bearbeitung von Vorlagen (Metadaten und Dokumente)
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1368
  [phgross]


2.1.7 (2012-06-19)
------------------

- Dossiercover: change fontsize and sizes of the textfield.
  Dossierdetails: change fontsizes.
  Issue #1432 Anpassungen Druchvorlage
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1432/
  [phgross]

- Use block layout in the dossiercover template, to allow easy customizations.
  [phgross]

- Dossiercover: changed conversion of description, to correctly display line breaks.
  Issue #1574 Falsche Zeichen im Deckblatt
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1574/
  [phgross]

- Added some Adjustments on names and layout of dossiercover and details view.
  Issue #1432 Anpassungen Druchvorlage
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1432/
  [phgross]

- Removed the get_selected_items and use the method from og.globalindex instead.
  [phgross]

2.1.6 (2012-05-07)
------------------

- Add a simple workflow_state helper which only translate the state (without html).
  [phgross]


2.1.5 (2012-05-02)
------------------

- Use htmlencoding convert method in all listings.
  Issue #1536 Dossiers: Unschoene Darstellung der Spalte "Autor" in Detailliste (PDF)
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1536/
  [phgross]

- Fixed get_render_arguments, added fallback for not existing owners.
  [phgross]

- https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1538/
  #1538 Verwenden der neuen utility Methode provide_request_layer in ftw.pdfgenerator
  [eschmutz]

2.1.4 (2012-03-29)
------------------
